add client.bat